--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -2,5 +2,7 @@
   "description": {
     "part1": "Ändere <1>src/App.js</1> und speichere um neu zu laden.",
     "part2": "Learn React"
-  }
+  },
+  "counter_one": "Die Sprache wurde erst ein mal gewechselt",
+  "counter_other": "Die Sprache wurde {{count}} mal gewechselt"
 }
