--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -2,5 +2,7 @@
   "description": {
     "part1": "Edit <1>src/App.js</1> and save to reload.",
     "part2": "Lerne React"
-  }
+  },
+  "counter_one": "Changed language once",
+  "counter_other": "Change language already {{count}} times"
 }
